[package]
name = "wiz-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.5", features = ["macros"] }
env_logger = "0.11.3"
log = "0.4.21"
logging_timer = "1.1.1"
serde = "1.0.199"
serde_json = "1.0.116"
surrealdb = "1.4.2"
tokio = "1.37.0"
url = "2.5.0"

# Other Dependenceis
[dependencies.wiz-bulb]
path="../wiz-lights-rs"
